golang/nginx-ingress-statefullset/k8s/statefullset.yaml
---
apiVersion: apps/v1
kind: StatefulSet

metadata:
  labels:
    service: "test-bridge-k8s-webservice"
  name: "test-bridge-k8s-webservice"
spec:
  serviceName: "test-bridge-k8s-webservice"
  replicas: 1
  selector:
    matchLabels:
      service: "test-bridge-k8s-webservice"
  template:
    metadata:
      labels:
        service: "test-bridge-k8s-webservice"
        tier: backend
    spec:
      containers:
        - image: "stevekieu/test-bridge-k8s:statefulset"
          name: "test-bridge-k8s-webservice"
          ports:
            - containerPort: 8080
              name: http-port
              protocol: TCP
          resources:
            requests:
              memory: 32Mi
              #cpu: 20m
          readinessProbe:
            failureThreshold: 2
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 30
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 30
          startupProbe:
            failureThreshold: 30
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
